Adds test coverage for iterator support

--- a/test/fixtures/page-alt.html
+++ b/test/fixtures/page-alt.html
@@ -3,6 +3,7 @@
   <title>Hello again, world</title>
 </head>
 <body>
-  <h1>Another sample HTML page</h1>
+  <h1>Another sample H1 tag</h1>
+  <h1>Two H1's on a page? Madness...</h1>
 </body>
 </html>
